# thermite3d

./: .gitignore  CMakeLists.txt  CREDITS.TXT  LICENSE.TXT  NotesForNextEngine.txt  settings.ini
Heightmap2Volume/: CMakeLists.txt
PolyVox/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
Raw2Volume/: CMakeLists.txt
Raw2Volume/source/: main.cpp
ScrapYard/: AbstractSurfacePatch.cpp  AbstractSurfacePatch.h  HalfEdgeSurfacePatch.cpp  HalfEdgeSurfacePatch.h  RegionGrower.inl  ThreadSafeQueue.h
Thermite/: CMakeLists.txt  plugins.cfg.in  plugins_d.cfg.in  settings.ini
Thermite/cmake/modules/: FindBullet.cmake  FindOGRE.cmake  FindOGREBullet.cmake  FindPolyVox.cmake  FindQtOgre.cmake
Thermite/doc/: Manual.docx  ResourceTypes.vsd
Thermite/include/: AbstractSettingsWidget.h  Application.h  ApplicationGameLogic.h  BackgroundTaskThread.h  CannonController.h  Console.h  DataStreamAdapter.h  DataStreamWrapper.h  DotSceneHandler.h  EventHandler.h  EventHandlingOgreWidget.h  FPSDialog.h  GameLogic.h  GraphicsSettingsWidget.h  LoadMapWidget.h  LoadingProgress.h  Log.h  LogEntry.h  LogLevel.h  LogManager.h  LogModel.h  LogModelSortFilterProxy.h  MainMenu.h  Map.h  MapHandler.h  MapManager.h  MapRegion.h  MapResource.h  MoviePlayer.h  MultiThreadedSurfaceExtractor.h  OgreWidget.h  PhysicalEntity.h  QtForwardDeclarations.h  QtOgreForwardDeclarations.h  RandomUnitVectors.h  RandomVectors.h  RunnerThread.h  Screen.h  SettingsDialog.h  Shell.h  (+22 more)
Thermite/include/Hacks/: Perlin.h
Thermite/include/Resources/: MapManager.h  QStringIODevice.h  ScriptManager.h  ScriptResource.h  TextManager.h  TextResource.h  VolumeManager.h  VolumeResource.h
Thermite/include/Tasks/: AStarPathfinderImpl.h  AmbientOcclusionTask.h  FindPathTask.h  Pathfinder.h  Pathfinder.inl  SurfaceExtractorTaskData.h  SurfaceMeshDecimationTask.h  SurfaceMeshExtractionTask.h  TaskProcessorThread.h
Thermite/include/scriptable/: Camera.h  Component.h  Entity.h  Globals.h  Keyboard.h  Light.h  Mouse.h  Object.h  ObjectStore.h  RenderComponent.h  ScriptEditorWidget.h  SkyBox.h  Vector3DClass.h  Vector3DPrototype.h  Volume.h
Thermite/resources/Ogre/M60/: chassis.mesh  gun_main.mesh  gun_main_muzzle.mesh  m60.material  turret_main.mesh
Thermite/resources/Ogre/maps/: castle.map  castle_(small).map  desert_(medium).map  hills.map  hills_(large).map  load_me.map  logo_(large).map  mountain_(medium).map  thermite_logo.map
Thermite/resources/Ogre/maps/desert/: DesertSurface.material  DesertUnderground.material  desert.volume
Thermite/resources/Ogre/maps/hills/: HillsSurface.material
Thermite/resources/Ogre/maps/mountain/: MountainSurface.material  MountainUnderground.material  mountain.volume
Thermite/resources/Ogre/maps/shared/: Ground.material  Rock.material  Thumbs.db
Thermite/resources/Ogre/maps/thermite_logo/: ThermiteLogoSurface.material
Thermite/resources/Ogre/materials/programs/: AssignMaterialIdVP.cg  AssignMaterialIdVP.program  BlackFP.cg  BlackFP.program  ColorFrom1DTextureFP.cg  ColorFrom1DTextureFP.program  PassThroughPositionVP.program  ShadowMapReceiverForWorld.cg  SingleProjectedTextureFP.cg  SingleProjectedTextureFP.program  SurfacePatchVP.cg  SurfacePatchVP.program  TriplanarTextureFP.cg  TriplanarTextureFP.program  VertexFormats.cg
Thermite/resources/Ogre/materials/scripts/: ColorFrom1DTexture.material  LightingAndDecalCombiner.material  RoofTiles.material  SingleProjectedTexture.material  TriplanarTexture.material
Thermite/resources/Ogre/models/: Cannon.mesh  Shell.blend
Thermite/resources/Ogre/models/M60/: gun_secondary.mesh  gun_secondary_muzzle.mesh  m60.material  m60.scene  turret_secondary.mesh
Thermite/resources/Ogre/old-materials/programs/: PassThroughVertexProgram.cg  ShadowMapReceiverForWorld.cg  ShadowMapReceiverForWorld.program  StandardQuad.program
Thermite/resources/Ogre/old-materials/scripts/: ShadowMapCaster.material  SkyBox.material  Water.material  bricks.material
Thermite/resources/Ogre/particle/: Debris.particle
Thermite/resources/Ogre/volumes/: terrain.volume
Thermite/resources/Qt/: ThermiteResources.qrc
Thermite/source/: AbstractSettingsWidget.cpp  AnyOption.cpp  Application.cpp  ApplicationGameLogic.cpp  BackgroundTaskThread.cpp  CannonController.cpp  Console.cpp  DataStreamAdapter.cpp  DataStreamWrapper.cpp  DotSceneHandler.cpp  EventHandlingOgreWidget.cpp  FPSDialog.cpp  GameLogic.cpp  GraphicsSettingsWidget.cpp  LoadMapWidget.cpp  LoadingProgress.cpp  Log.cpp  LogEntry.cpp  LogManager.cpp  LogModel.cpp  LogModelSortFilterProxy.cpp  MainMenu.cpp  Map.cpp  MapHandler.cpp  MapManager.cpp  MapRegion.cpp  MapResource.cpp  MoviePlayer.cpp  MultiThreadedSurfaceExtractor.cpp  OgreWidget.cpp  PhysicalEntity.cpp  RandomUnitVectors.cpp  RandomVectors.cpp  RunnerThread.cpp  SettingsDialog.cpp  Shell.cpp  SurfaceDecimatorRunnable.cpp  SurfaceExtractorRunnable.cpp  SurfaceExtractorTaskData.cpp  SurfaceExtractorThread.cpp  (+16 more)
Thermite/source/Hacks/: Perlin.cpp
Thermite/source/Logging/: Log.cpp
Thermite/source/Resources/: ScriptManager.cpp  ScriptResource.cpp  TextManager.cpp  TextResource.cpp  VolumeManager.cpp  VolumeResource.cpp
Thermite/source/scriptable/: Camera.cpp  Component.cpp  Entity.cpp  Globals.cpp  Keyboard.cpp  Light.cpp  Mouse.cpp  Object.cpp  ObjectStore.cpp  RenderComponent.cpp  ScriptEditorWidget.cpp  SkyBox.cpp  Vector3DClass.cpp  Vector3DPrototype.cpp  Volume.cpp
Thermite/source/tasks/: AmbientOcclusionTask.cpp  FindPathTask.cpp  Pathfinder.cpp  SurfaceExtractorTaskData.cpp  SurfaceMeshDecimationTask.cpp  SurfaceMeshExtractionTask.cpp  Task.cpp  TaskProcessorThread.cpp
Thermite/ui/: Console.ui  LoadMapWidget.ui  LoadingProgress.ui  MainMenu.ui  MoviePlayer.ui  ScriptEditorWidget.ui
include/: CannonController.h  ChooseMeshWidget.h  DataStreamAdapter.h  DemoGameLogic.h  DotSceneWithVolumeHandler.h  MainMenu.h  Map.h  PhysicalEntity.h  PhysicalObject.h  Shell.h  SurfacePatchRenderable.h  ThermiteForwardDeclarations.h  ThermiteGameLogic.h  TimeStampedRenderOperation.h  TimeStampedRenderOperationCache.h  VolumeManager.h  (+8 more)
(+85 files in other folders)
