CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Raw2Volume)

#Standard modules
#FIND_PACKAGE(Boost 1.34.1 COMPONENTS program_options filesystem REQUIRED)

#Custom modules
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
FIND_PACKAGE(PolyVox REQUIRED)

SET(SRC_FILES
	source/main.cpp
)

SET(INC_FILES
)

#"Sources" and "Headers" are the group names in Visual Studio.
SOURCE_GROUP("Sources" FILES ${SRC_FILES})
SOURCE_GROUP("Headers" FILES ${INC_FILES})

FIND_PACKAGE(Qt4)
IF (WIN32)
	SET(QT_USE_QTMAIN 1)
ENDIF (WIN32)
SET(QT_USE_QTGUI 1)
INCLUDE(${QT_USE_FILE})

#QT4_WRAP_CPP(MOC_SRCS ${INC_FILES})
#QT4_WRAP_UI(UI_SRCS ${UI_FILES})
#QT4_ADD_RESOURCES(RESOURCE_SRCS ${RESOURCE_FILES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/include ${PolyVoxCore_INCLUDE_DIRS} ${PolyVoxUtil_INCLUDE_DIRS})
LINK_DIRECTORIES(${PolyVoxCore_LIBRARY_DIRS} ${PolyVoxUtil_LIBRARY_DIRS})
ADD_EXECUTABLE(Raw2Volume ${SRC_FILES})
TARGET_LINK_LIBRARIES(Raw2Volume ${QT_LIBRARIES} ${PolyVoxCore_LIBRARIES} ${PolyVoxUtil_LIBRARIES})

#Install
INSTALL(TARGETS Raw2Volume
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

#IF (WIN32) #Windows
#CONFIGURE_FILE(${OGRE_LIBRARY_DIRS}/OgreMain_d.dll ${CMAKE_CURRENT_BINARY_DIR}/debug/OgreMain_d.dll COPYONLY)
#CONFIGURE_FILE(${OGRE_LIBRARY_DIRS}/RenderSystem_GL_d.dll ${CMAKE_CURRENT_BINARY_DIR}/debug/RenderSystem_GL_d.dll COPYONLY)
#CONFIGURE_FILE(${OGRE_LIBRARY_DIRS}/RenderSystem_Direct3D9_d.dll ${CMAKE_CURRENT_BINARY_DIR}/debug/RenderSystem_Direct3D9_d.dll COPYONLY)

#CONFIGURE_FILE(${OGRE_LIBRARY_DIRS}/OgreMain.dll ${CMAKE_CURRENT_BINARY_DIR}/release/OgreMain.dll COPYONLY)
#CONFIGURE_FILE(${OGRE_LIBRARY_DIRS}/RenderSystem_GL.dll ${CMAKE_CURRENT_BINARY_DIR}/release/RenderSystem_GL.dll COPYONLY)
#CONFIGURE_FILE(${OGRE_LIBRARY_DIRS}/RenderSystem_Direct3D9.dll ${CMAKE_CURRENT_BINARY_DIR}/release/RenderSystem_Direct3D9.dll COPYONLY)
#ENDIF (WIN32)

IF(WIN32)	
	#Install the PolyVox .dll's
	INSTALL(FILES $ENV{POLYVOX_HOME}/PolyVoxCore/bin/PolyVoxCore.dll DESTINATION bin)
	INSTALL(FILES $ENV{POLYVOX_HOME}/PolyVoxUtil/bin/PolyVoxUtil.dll DESTINATION bin)	
ENDIF(WIN32)

#INSTALL(DIRECTORY resources DESTINATION ${CMAKE_INSTALL_PREFIX}/bin PATTERN "*.svn*" EXCLUDE) #this will exclude the .svn files
#INSTALL(DIRECTORY media DESTINATION ${CMAKE_INSTALL_PREFIX}/share/thermite PATTERN "*.svn*" EXCLUDE) #this will exclude the .svn files
#INSTALL(DIRECTORY resources/Ogre DESTINATION ${CMAKE_INSTALL_PREFIX}/share/thermite PATTERN "*.svn*" EXCLUDE) #this will exclude the .svn files
#INSTALL(FILES resource/resources.cfg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/thermite)